tests/diagnostics/catalog/snapshots/ir/IR0064.snap
error[IR0064]: IR_E_UNREACHABLE_PATTERN
 --> tests/diagnostics/catalog/sources/ir/IR0064.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0064
  = help: keep IR validation diagnostics structured and catalog-backed
